still getting alignment correct with social logos deployed to rusin-portfoli.netlify.app

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -30,8 +30,7 @@
 }
 
 
-
-@media screen and (max-width:830px){
+@media screen and (max-width:965px){
     .modal-description {
         text-align: center;
         font-size: 3vw;
@@ -44,10 +43,9 @@
         align-items: center;
         padding-top: 5px;
     }
+   
     .link-titles {
-        margin-left: 10px;
-        font-size: 3vw;
-        color: red;
+        font-size: 4vw;
     }
 
 }
