--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -8,9 +8,7 @@
     width: 100%;
     height: 80%;
     transition: width 300ms;
-
 }
-
 
 .p-card-title {
     color: rgb(187, 187, 187);
@@ -36,12 +34,8 @@
     text-decoration: none;
 }
 
-.modal-animation {
-    transition: 2s;
-}
 
-
-@media screen and (max-width:830px){
+@media screen and (max-width:965px){
 
     .p-card-bg {
         width: 100%;
