--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -61,7 +61,7 @@
 
 .about-icons-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     margin-top: 50px;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .about-logos {
-    margin: 0 50px;
+    margin: 0 25px;
 }
 
  .show {
@@ -111,9 +111,15 @@
     transition: all 1s ease;
 }
 
-@media screen and (max-width:830px){
+@media screen and (max-width:965px){
     .about-page-container{
         flex-direction: column-reverse;
+    }
+
+    .about-icons-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
     }
 
     .btn-container {
